# geovibes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LOCATION_ANALYZER_GUIDE.md  Makefile  PLAN.md  README.md  XEE_IMPLEMENTATION_FINAL.md  XEE_IMPLEMENTATION_SUMMARY.md  aquaculture_sampled_negatives.geojson  benchmark_tile_fetching.py  config.yaml  create_db.py  download_embeddings.py  duckdb_ei.ipynb  full_dataset_aquaculture_AL.geojson  jupyterthreading-error.md  manifest.csv  prep_data.py  pyproject.toml  requirements.txt  requirements_v2.txt  run.py  run_geovibes_webapp.py  sample_negatives_config.yaml  sampling_config.yaml  test_classification_pipeline.py  transform_embeddings.py  transform_embeddings_process.py  transform_embeddings_simple.py  vibe_checker.ipynb
.cursor/rules/: config-and-docs.mdc  geovibes-module.mdc  jupyter-notebooks.mdc  project-philosophy.mdc  python-standards.mdc
alabama_aquaculture/: aquaculture_AL_with_class.geojson  augmented_dataset_20251129_214710.geojson  augmented_dataset_20251129_215418.geojson
alabama_aquaculture/v0/: classification_detections.geojson  classification_union.geojson
alabama_aquaculture/v1/: classification_detections.geojson  classification_union.geojson  model.json
classification_output/: classification_union.geojson  model.json
classification_output_fixed/: classification_detections.geojson  model.json
config/: resnet_config.json  ui_config.json  vibes_config.example.json  vibes_config.json
config/inference/: modal_alabama_resnet18_RGB.json  modal_java_resnet18_RGB.json
docs/: data-formats.md  event-flow.md  modes-and-state.md  scripts.md  ui-widgets.md
geometries/: bali.geojson  bangka-belitung.geojson  java.geojson  lesser_sunda_islands.geojson  maluku.geojson  new-mexico.geojson  papua.geojson  riau_islands.geojson  sulawesi.geojson  sumatra.geojson
geovibes/: __init__.py  cli.py  database.py  ee_tools.py  tiling.py  ui.py  utils.py  xyz.py
geovibes/agents/: __init__.py  clustering.py  pipeline.py  places.py  schemas.py  thumbnail.py  verification_agent.py
geovibes/classification/: __init__.py  classifier.py  cross_validation.py  data_loader.py  inference.py  output.py  pipeline.py  run_pipeline.py  sample_negatives.py  sample_positives.py
geovibes/classification/config/: aquaculture_negatives.yaml
geovibes/database/: cloud.py  faiss_db.py  stream_ingest.py  vss_db.py  xee_embeddings.py
geovibes/earthgenome/: join_embeddings_with_centroids.py
geovibes/geotiff/: __init__.py  geodataset.py  modal_inference.py  raster.py
geovibes/google/: embeddings.py  geojson_to_parquet.py  tiling_to_gee_asset.py
geovibes/imagery/: export_s2_gee.py
geovibes/tests/: test_state.py  test_tiling.py  test_utils.py
geovibes/ui/: __init__.py  app.py  data_manager.py  datasets.py  location_analyzer.py  map_manager.py  state.py  status.py  tiles.py  utils.py  xyz.py
geovibes/ui_config/: __init__.py  constants.py  settings.py
geovibes/xyz/: modal_inference.py  split_tiles_to_png.py  xyz_tile_downloader.py
notebooks/: download-and-embed.ipynb  resnet34_xyz_embeddings.ipynb  resnet34_xyz_tile_embeddings.ipynb
notes/: duckdb_hsnw.md
scripts/: QUICK_START.md  XEE_PIPELINE_GUIDE.md  convert_geometry_column.py  export_cdl_mask.py  extract_sumatra_mill_embeddings.py  filter_isolated_detections.py  filter_mills_by_year.py  gcs_to_source_coop.sh  ingest_alphaearth_tiles_to_faiss.py  overlay_detections_on_image.py  validate_detections.py  xee_pipeline.py  zarr_to_duckdb.py
src/: __init__.py  database.py  duckdb_embedding_index.py  ee_tools.py  faiss_database.py  gee.py  gemini_faiss_duckdb.py  google_geojson_to_duckdb.py  google_satellite_embeddings.py  region_to_eg_embeddings.py  region_to_embeddings.py  tiling.py  ui.py  utils.py
src/database/: faiss_database.py
src/earth_genome/: convert_parquet.py  duckdb_embedding_index.py
src/geotiff/: __init__.py  batch_inference.py  embeddings.py  generate_geotiff_embeddings.py  geodataset.py  modal_embedding.py  modal_inference.py  raster.py  run_modal_example.sh  transforms.py
src/google/: build_database.py  embeddings.py  geojson_to_duckdb.py  geojson_to_parquet.py  google_database.py  mgrs_tiling_to_asset.py  tiling_to_gee_asset.py
src/imagery/: export_s2_gee.py
src/tiled/: modal_inference.py
src/ui_config/: __init__.py  constants.py  settings.py
test_data/: sample_training_data.geojson
test_data/classification_auto/: model.json
tests/: conftest.py  test_classification.py  test_cloud.py  test_data_manager_boundary.py  test_dataset_manager.py  test_detection_loading.py  test_faiss_db.py  test_map_manager_unit.py  test_polygon_labeling.py  test_save_dataset_status.py  test_state.py  test_status_bus.py  test_tile_panel.py  test_tiling.py  test_utils.py  test_verification_agent.py  test_xyz.py
